--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1751,6 +1751,9 @@
     <ClCompile Include="UVa\400\484.cpp">
       <Filter>UVaOJ\400\480</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10394.cpp">
+      <Filter>UVaOJ\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
