--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1760,6 +1760,9 @@
     <ClCompile Include="UVa\10500\10539.cpp">
       <Filter>UVaOJ\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10680.cpp">
+      <Filter>UVaOJ\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
