prime sieve, goldbach

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1781,6 +1781,9 @@
     <ClCompile Include="UVa\500\543.cpp">
       <Filter>UVaOJ\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\686.cpp">
+      <Filter>UVaOJ\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
