--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1784,6 +1784,9 @@
     <ClCompile Include="UVa\600\686.cpp">
       <Filter>UVaOJ\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10168.cpp">
+      <Filter>UVaOJ\10100\10160</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
