--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1790,6 +1790,9 @@
     <ClCompile Include="UVa\10200\10200.cpp">
       <Filter>UVaOJ\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10235.cpp">
+      <Filter>UVaOJ\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
