--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1793,6 +1793,9 @@
     <ClCompile Include="UVa\10200\10235.cpp">
       <Filter>UVaOJ\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10490.cpp">
+      <Filter>UVaOJ\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
