--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1805,6 +1805,9 @@
     <ClCompile Include="UVa\10900\10924.cpp">
       <Filter>UVaOJ\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10948.cpp">
+      <Filter>UVaOJ\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
