--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1814,6 +1814,9 @@
     <ClCompile Include="UVa\10300\10392.cpp">
       <Filter>UVaOJ\10000\10030</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10139.cpp">
+      <Filter>UVaOJ\10100\10130</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
