--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1817,6 +1817,9 @@
     <ClCompile Include="UVa\10100\10139.cpp">
       <Filter>UVaOJ\10100\10130</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\516.cpp">
+      <Filter>UVaOJ\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
