--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1826,6 +1826,9 @@
     <ClCompile Include="UVa\10100\10140.cpp">
       <Filter>UVaOJ\10100\10140</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10699.cpp">
+      <Filter>UVaOJ\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
