--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1829,6 +1829,9 @@
     <ClCompile Include="UVa\10600\10699.cpp">
       <Filter>UVaOJ\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10700\10791.cpp">
+      <Filter>UVaOJ\10700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
