--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1838,6 +1838,9 @@
     <ClCompile Include="UVa\11400\11436.cpp">
       <Filter>UVaOJ\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11400\11466.cpp">
+      <Filter>UVaOJ\11400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
