--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1844,6 +1844,9 @@
     <ClCompile Include="UVa\100\160.cpp">
       <Filter>UVaOJ\100\160</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\583.cpp">
+      <Filter>UVaOJ\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
